# crateful

./: .bacon-locations  .env  Cargo.toml  LICENSE  README.md  Scripts.toml  bacon.toml
src/: app.rs  app_state.rs  audio_player.rs  env.rs  event.rs  file_manager.rs  instructs.rs  keys.rs  main.rs  metadata.rs  pause.rs  ui.rs  volume.rs
