[package]
name = "crateful"
version = "0.1.0"
description = "template start for track sorter cli"
authors = ["michael"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
color-eyre = "0.6.3"
glob = "0.3.3"
rodio = "0.21.1"
serde = "1.0.225"
