[package]
name = "crateful"
version = "0.1.0"
description = "template start for track sorter cli"
authors = ["michael"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
walkdir="2"
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
glob = "0.3.3"
rodio = "0.21.1"
serde = "1.0.225"
symphonia = "0.5.5"
derive_setters = "0.1.8"
ratatui-explorer = "0.2.1"
dotenv = "0.15.0"
cli-log = "2.1.0"
config = "0.15.19"
directories = "6.0"
env_home = "0.1.0"
dirs = "6.0.0"
roundable = "0.2.0"
